--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="keywords" content="">
 </head>
 <body>
-    <script src="pixi-dev.js"></script>
-    <script src="aliases.js"></script>
-    <script src="helpers.js"></script>
-    <script src="keyboard.js"></script>
+    <script src="js/pixi-dev.js"></script>
+    <script src="js/aliases.js"></script>
+    <script src="js/helpers.js"></script>
+    <script src="js/keyboard.js"></script>
     <script type="text/javascript">
     </script>
 </body>
